grammar.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { Program: peg$parseProgram },
        peg$startRuleFunction  = peg$parseProgram,

        peg$c0 = function(stat, stats) {
              if (stat !== null) {
                stats.unshift(stat)
              }
              return stats;
            },
        peg$c1 = function(stat) {
            if (stat === null) {
              return [];
            }
            return [stat];
          },
        peg$c2 = function() {
            return null;
          },
        peg$c3 = function(stats) {
            return {stats : stats};
          },
        peg$c4 = function(dest) {
            return null;
          },
        peg$c5 = function(left, binOp, right) { return {left: left, op: binOp, right: right}; },
        peg$c6 = function(unOp, expr) { return {unOp: unOp, expr: expr}},
        peg$c7 = function(expr) { return expr; },
        peg$c8 = "!",
        peg$c9 = { type: "literal", value: "!", description: "\"!\"" },
        peg$c10 = "-",
        peg$c11 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c12 = "len",
        peg$c13 = { type: "literal", value: "len", description: "\"len\"" },
        peg$c14 = "ord",
        peg$c15 = { type: "literal", value: "ord", description: "\"ord\"" },
        peg$c16 = "chr",
        peg$c17 = { type: "literal", value: "chr", description: "\"chr\"" },
        peg$c18 = "_",
        peg$c19 = { type: "literal", value: "_", description: "\"_\"" },
        peg$c20 = /^[a-z]/,
        peg$c21 = { type: "class", value: "[a-z]", description: "[a-z]" },
        peg$c22 = /^[A-Z]/,
        peg$c23 = { type: "class", value: "[A-Z]", description: "[A-Z]" },
        peg$c24 = /^[0-9]/,
        peg$c25 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c26 = function(sign, digits) { return parseInt((sign ? sign : '') + digits.join(''), 10); },
        peg$c27 = "+",
        peg$c28 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c29 = "'",
        peg$c30 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c31 = "\"",
        peg$c32 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c33 = "\\",
        peg$c34 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c35 = /^[^'"]/,
        peg$c36 = { type: "class", value: "[^\\'\"]", description: "[^\\'\"]" },
        peg$c37 = "0",
        peg$c38 = { type: "literal", value: "0", description: "\"0\"" },
        peg$c39 = "b",
        peg$c40 = { type: "literal", value: "b", description: "\"b\"" },
        peg$c41 = "t",
        peg$c42 = { type: "literal", value: "t", description: "\"t\"" },
        peg$c43 = "n",
        peg$c44 = { type: "literal", value: "n", description: "\"n\"" },
        peg$c45 = "f",
        peg$c46 = { type: "literal", value: "f", description: "\"f\"" },
        peg$c47 = "r",
        peg$c48 = { type: "literal", value: "r", description: "\"r\"" },
        peg$c49 = { type: "other", description: "whitespace" },
        peg$c50 = "\t",
        peg$c51 = { type: "literal", value: "\t", description: "\"\\t\"" },
        peg$c52 = "\x0B",
        peg$c53 = { type: "literal", value: "\x0B", description: "\"\\x0B\"" },
        peg$c54 = "\f",
        peg$c55 = { type: "literal", value: "\f", description: "\"\\f\"" },
        peg$c56 = " ",
        peg$c57 = { type: "literal", value: " ", description: "\" \"" },
        peg$c58 = /^[\n\r\u2028\u2029]/,
        peg$c59 = { type: "class", value: "[\\n\\r\\u2028\\u2029]", description: "[\\n\\r\\u2028\\u2029]" },
        peg$c60 = { type: "other", description: "end of line" },
        peg$c61 = "\n",
        peg$c62 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c63 = "\r\n",
        peg$c64 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },
        peg$c65 = "\r",
        peg$c66 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c67 = "\u2028",
        peg$c68 = { type: "literal", value: "\u2028", description: "\"\\u2028\"" },
        peg$c69 = "\u2029",
        peg$c70 = { type: "literal", value: "\u2029", description: "\"\\u2029\"" },
        peg$c71 = "#",
        peg$c72 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c73 = { type: "any", description: "any character" },
        peg$c74 = "is",
        peg$c75 = { type: "literal", value: "is", description: "\"is\"" },
        peg$c76 = "return",
        peg$c77 = { type: "literal", value: "return", description: "\"return\"" },
        peg$c78 = "int",
        peg$c79 = { type: "literal", value: "int", description: "\"int\"" },
        peg$c80 = "bool",
        peg$c81 = { type: "literal", value: "bool", description: "\"bool\"" },
        peg$c82 = "char",
        peg$c83 = { type: "literal", value: "char", description: "\"char\"" },
        peg$c84 = "string",
        peg$c85 = { type: "literal", value: "string", description: "\"string\"" },
        peg$c86 = "call",
        peg$c87 = { type: "literal", value: "call", description: "\"call\"" },
        peg$c88 = "pair",
        peg$c89 = { type: "literal", value: "pair", description: "\"pair\"" },
        peg$c90 = "newpair",
        peg$c91 = { type: "literal", value: "newpair", description: "\"newpair\"" },
        peg$c92 = "fst",
        peg$c93 = { type: "literal", value: "fst", description: "\"fst\"" },
        peg$c94 = "snd",
        peg$c95 = { type: "literal", value: "snd", description: "\"snd\"" },
        peg$c96 = ",",
        peg$c97 = { type: "literal", value: ",", description: "\",\"" },
        peg$c98 = "*",
        peg$c99 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c100 = "/",
        peg$c101 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c102 = "%",
        peg$c103 = { type: "literal", value: "%", description: "\"%\"" },
        peg$c104 = ">",
        peg$c105 = { type: "literal", value: ">", description: "\">\"" },
        peg$c106 = ">=",
        peg$c107 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c108 = "<",
        peg$c109 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c110 = "<=",
        peg$c111 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c112 = "==",
        peg$c113 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c114 = "!=",
        peg$c115 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c116 = "&&",
        peg$c117 = { type: "literal", value: "&&", description: "\"&&\"" },
        peg$c118 = "||",
        peg$c119 = { type: "literal", value: "||", description: "\"||\"" },
        peg$c120 = "(",
        peg$c121 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c122 = ")",
        peg$c123 = { type: "literal", value: ")", description: "\")\"" },
        peg$c124 = "[",
        peg$c125 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c126 = "]",
        peg$c127 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c128 = "NULL",
        peg$c129 = { type: "literal", value: "NULL", description: "\"NULL\"" },
        peg$c130 = "true",
        peg$c131 = { type: "literal", value: "true", description: "\"true\"" },
        peg$c132 = "false",
        peg$c133 = { type: "literal", value: "false", description: "\"false\"" },
        peg$c134 = "=",
        peg$c135 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c136 = "while",
        peg$c137 = { type: "literal", value: "while", description: "\"while\"" },
        peg$c138 = "do",
        peg$c139 = { type: "literal", value: "do", description: "\"do\"" },
        peg$c140 = "done",
        peg$c141 = { type: "literal", value: "done", description: "\"done\"" },
        peg$c142 = "if",
        peg$c143 = { type: "literal", value: "if", description: "\"if\"" },
        peg$c144 = "then",
        peg$c145 = { type: "literal", value: "then", description: "\"then\"" },
        peg$c146 = "else",
        peg$c147 = { type: "literal", value: "else", description: "\"else\"" },
        peg$c148 = "fi",
        peg$c149 = { type: "literal", value: "fi", description: "\"fi\"" },
        peg$c150 = "skip",
        peg$c151 = { type: "literal", value: "skip", description: "\"skip\"" },
        peg$c152 = "read",
        peg$c153 = { type: "literal", value: "read", description: "\"read\"" },
        peg$c154 = "free",
        peg$c155 = { type: "literal", value: "free", description: "\"free\"" },
        peg$c156 = "exit",
        peg$c157 = { type: "literal", value: "exit", description: "\"exit\"" },
        peg$c158 = "print",
        peg$c159 = { type: "literal", value: "print", description: "\"print\"" },
        peg$c160 = "println",
        peg$c161 = { type: "literal", value: "println", description: "\"println\"" },
        peg$c162 = "begin",
        peg$c163 = { type: "literal", value: "begin", description: "\"begin\"" },
        peg$c164 = "end",
        peg$c165 = { type: "literal", value: "end", description: "\"end\"" },
        peg$c166 = ";",
        peg$c167 = { type: "literal", value: ";", description: "\";\"" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseProgram() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseBEGIN();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parseFunc();
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parseFunc();
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseStatList();
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseEND();
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parse__();
                    if (s8 !== peg$FAILED) {
                      s1 = [s1, s2, s3, s4, s5, s6, s7, s8];
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseFunc() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16;

      s0 = peg$currPos;
      s1 = peg$parseType();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseIdent();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse__();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseLEFT_PAREN();
              if (s5 !== peg$FAILED) {
                s6 = peg$parse__();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseParamList();
                  if (s7 === peg$FAILED) {
                    s7 = null;
                  }
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parse__();
                    if (s8 !== peg$FAILED) {
                      s9 = peg$parseRIGHT_PAREN();
                      if (s9 !== peg$FAILED) {
                        s10 = peg$parse__();
                        if (s10 !== peg$FAILED) {
                          s11 = peg$parseIS();
                          if (s11 !== peg$FAILED) {
                            s12 = peg$parse__();
                            if (s12 !== peg$FAILED) {
                              s13 = peg$parseStatList();
                              if (s13 !== peg$FAILED) {
                                s14 = peg$parse__();
                                if (s14 !== peg$FAILED) {
                                  s15 = peg$parseEND();
                                  if (s15 !== peg$FAILED) {
                                    s16 = peg$parse_();
                                    if (s16 !== peg$FAILED) {
                                      s1 = [s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16];
                                      s0 = s1;
                                    } else {
                                      peg$currPos = s0;
                                      s0 = peg$FAILED;
                                    }
                                  } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                  }
                                } else {
                                  peg$currPos = s0;
                                  s0 = peg$FAILED;
                                }
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseParamList() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parseParam();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse__();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$currPos;
          s5 = peg$parseCOMMA();
          if (s5 !== peg$FAILED) {
            s6 = peg$parse__();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseParam();
              if (s7 !== peg$FAILED) {
                s5 = [s5, s6, s7];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$currPos;
            s5 = peg$parseCOMMA();
            if (s5 !== peg$FAILED) {
              s6 = peg$parse__();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseParam();
                if (s7 !== peg$FAILED) {
                  s5 = [s5, s6, s7];
                  s4 = s5;
                } else {
                  peg$currPos = s4;
                  s4 = peg$FAILED;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          }
          if (s3 !== peg$FAILED) {
            s1 = [s1, s2, s3];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseParam() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseType();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseIdent();
          if (s3 !== peg$FAILED) {
            s1 = [s1, s2, s3];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseStatList() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseStat();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse__();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseSEMICOLON();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse__();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseStatList();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c0(s1, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseStat();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c1(s1);
        }
        s0 = s1;
      }

      return s0;
    }

    function peg$parseStat() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

      s0 = peg$currPos;
      s1 = peg$parseSKIP();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2();
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseBEGIN();
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseStatList();
            if (s3 !== peg$FAILED) {
              s4 = peg$parse_();
              if (s4 !== peg$FAILED) {
                s5 = peg$parseEND();
                if (s5 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c3(s3);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseREAD();
          if (s1 !== peg$FAILED) {
            s2 = peg$parse_();
            if (s2 !== peg$FAILED) {
              s3 = peg$parseAssignLHS();
              if (s3 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c4(s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseFREE();
            if (s1 !== peg$FAILED) {
              s2 = peg$parse_();
              if (s2 !== peg$FAILED) {
                s3 = peg$parseExpr();
                if (s3 !== peg$FAILED) {
                  s1 = [s1, s2, s3];
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parseEXIT();
              if (s1 !== peg$FAILED) {
                s2 = peg$parse_();
                if (s2 !== peg$FAILED) {
                  s3 = peg$parseExpr();
                  if (s3 !== peg$FAILED) {
                    s1 = [s1, s2, s3];
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                s1 = peg$parseRETURN();
                if (s1 !== peg$FAILED) {
                  s2 = peg$parse_();
                  if (s2 !== peg$FAILED) {
                    s3 = peg$parseExpr();
                    if (s3 !== peg$FAILED) {
                      s1 = [s1, s2, s3];
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
                if (s0 === peg$FAILED) {
                  s0 = peg$currPos;
                  s1 = peg$parsePRINTLN();
                  if (s1 !== peg$FAILED) {
                    s2 = peg$parse_();
                    if (s2 !== peg$FAILED) {
                      s3 = peg$parseExpr();
                      if (s3 !== peg$FAILED) {
                        s1 = [s1, s2, s3];
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                  if (s0 === peg$FAILED) {
                    s0 = peg$currPos;
                    s1 = peg$parsePRINT();
                    if (s1 !== peg$FAILED) {
                      s2 = peg$parse_();
                      if (s2 !== peg$FAILED) {
                        s3 = peg$parseExpr();
                        if (s3 !== peg$FAILED) {
                          s1 = [s1, s2, s3];
                          s0 = s1;
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                    if (s0 === peg$FAILED) {
                      s0 = peg$currPos;
                      s1 = peg$parseIF();
                      if (s1 !== peg$FAILED) {
                        s2 = peg$parsePredicate();
                        if (s2 !== peg$FAILED) {
                          s3 = peg$parseTHEN();
                          if (s3 !== peg$FAILED) {
                            s4 = peg$parse_();
                            if (s4 !== peg$FAILED) {
                              s5 = peg$parseStatList();
                              if (s5 !== peg$FAILED) {
                                s6 = peg$parse__();
                                if (s6 !== peg$FAILED) {
                                  s7 = peg$parseELSE();
                                  if (s7 !== peg$FAILED) {
